-- Initial schema for playpro catalog (compatible with Postgres and H2)

CREATE TABLE roles (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar(50) NOT NULL UNIQUE
);

CREATE TABLE users (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username varchar(100) NOT NULL UNIQUE,
    password varchar(255),
    role_id bigint,
    CONSTRAINT fk_users_role FOREIGN KEY (role_id) REFERENCES roles(id)
);

CREATE TABLE products (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sku varchar(100) NOT NULL UNIQUE,
    name varchar(255) NOT NULL,
    description text,
    status varchar(50) DEFAULT 'DRAFT',
    version bigint DEFAULT 1,
    created_by varchar(100),
    created_at timestamp DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamp DEFAULT CURRENT_TIMESTAMP
);

-- Seed roles
INSERT INTO roles (name) VALUES ('ADMIN');
INSERT INTO roles (name) VALUES ('MERCHANDISER');
INSERT INTO roles (name) VALUES ('CATALOG_MANAGER');
INSERT INTO roles (name) VALUES ('VIEWER');

-- Sample product
INSERT INTO products (sku, name, description, status, created_by) VALUES ('SKU-001', 'Sample Product 1', 'This is a seeded sample product', 'ACTIVE', 'system');
